Tue Nov 18 15:15:23 UTC 2008  Johnny Willemsen <jwillemsen@remedy.nl>

        * ciao/Servants/Servant_Impl_Base.h:
        * DAnCE/Deployment/Deployment_TargetManager.idl:
        * DAnCE/TargetManager/DomainDataManager.h:
          Layout changes

        * DAnCE/TargetManager/CmpClient.cpp:
          wchar changes

        * DAnCE/TargetManager/DomainEvents.idl:
          Updated includes

        * DAnCE/TargetManager/TargetManager.mpc:
        * DAnCE/TargetManager/TargetManagerImpl.idl
          Updated for all refactoring

        * MPC/config/ciao_nodemanager_stub.mpb:
        * MPC/config/ciao_targetmanager_stub.mpb:
        * MPC/config/ciao_targetmanager_svnt.mpb:
        * MPC/config/dance_nodemanager_stub.mpb:
        * MPC/config/dance_nodemanager_svnt.mpb:
          Updated these with unique lib names and correct aftes

Tue Nov 18 14:55:23 UTC 2008  Johnny Willemsen <jwillemsen@remedy.nl>

        * DAnCE/Interfaces/Interfaces.mpc:
          Added custom idl projects and added DAnCE_NodeManager_svnt

Tue Nov 18 14:16:23 UTC 2008  Johnny Willemsen <jwillemsen@remedy.nl>

        * ciao/Contexts/Context.mpc:
          Added missing dynamicflags

        * ciao/Servants/Servant_Impl_Utils_T.cpp:
          Layout change

        * MPC/config/ciao_context_impl.mpb:
          New base project

        * MPC/config/ciao_servant.mpb:
          Use ciao_context_impl

Mon Nov 17 16:08:23 UTC 2008  Johnny Willemsen <jwillemsen@remedy.nl>

        * CCF/CCF/IDL2/Parser.hpp:
          Undef interface when it is defined

        * DAnCE/DomainApplication/Domain_Application_Impl.cpp
        * DAnCE/DomainApplication/Domain_Application_Impl.h
        * DAnCE/DomainApplicationManager/DomainApplicationManager_Impl.cpp
        * DAnCE/DomainApplicationManager/DomainApplicationManager_Impl.h
        * DAnCE/DomainApplicationManager/Node_Locator.cpp
        * DAnCE/DomainApplicationManager/Node_Locator.h
        * DAnCE/ExecutionManager/ExecutionManager_Impl.cpp