@@ -3,7 +3,6 @@
 
 project (DAnCE_Utils): dance_lib, dance_deployment_svnt, naming  {
   sharedname = DAnCE_Utils
-  requires += dummy_label
   dynamicflags = DANCE_UTILS_BUILD_DLL
 
   Source_Files {
